Fix broken javadoc generation